# GofilePan

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/gofilepan-cli/: Cargo.toml
crates/gofilepan-cli/src/: main.rs
crates/gofilepan-core/: Cargo.toml
crates/gofilepan-core/src/: lib.rs
crates/gofilepan-gui/: Cargo.toml  build.rs
crates/gofilepan-gui/src/: main.rs
crates/gofilepan-gui/ui/: main.slint
