[package]
name = "gofilepan-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gofilepan"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
gofilepan-core = { path = "../gofilepan-core" }
tokio.workspace = true

