[package]
name = "gofilepan-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gofilepan-gui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
dirs.workspace = true
eframe.workspace = true
egui.workspace = true
gofilepan-core = { path = "../gofilepan-core" }
rfd.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
